--- a/local.docker-compose.yml
+++ b/local.docker-compose.yml
@@ -10,4 +10,8 @@ services:
     depends_on:
       - mongo
     environment:
-      MONGODB_CONNECTION: mongodb://mongo:27017/contentdb    
+      MONGODB_CONNECTION: mongodb://mongo:27017/contentdb
+
+  web:
+    build: ./content-web
+    image: local-fabrikam-web
