--- a/.github/workflows/fabrikam-web.yml
+++ b/.github/workflows/fabrikam-web.yml
@@ -26,7 +26,7 @@ jobs:
   # Push image to GitHub Packages.
   # See also https://docs.docker.com/docker-hub/builds/
   push:
-    runs-on: debian-latest
+    runs-on: ubuntu-latest
     if: github.event_name == 'push'
 
     steps:
