--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,37 +1,28 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Docker Compose Build and Deploy
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+    tags:
+      - v*
   pull_request:
-    branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
+  push:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
+
       - name: Log into GitHub Container Registry
         run: echo "${{ secrets.CR_PAT }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Build and Push image
-        run: |  
+        run: |
           docker-compose -f docker-compose.yml -f build.docker-compose.yml build
           docker-compose -f docker-compose.yml -f build.docker-compose.yml push
-
+          
       - name: Login on Azure CLI
         uses: azure/login@v1.1
         with:
@@ -40,16 +31,9 @@ jobs:
       - name: Deploy Infrastructure
         shell: pwsh
         env:
-          CR_PAT: ${{ secrets.CR_PAT }}
+          CR_PAT: ${{ secrets.CR_PAT }}        
         run: |
-          .\infrastructure\deploy-infrastructure.ps1 -studentprefix mtk
-
-      # Runs a single command using the runners shell
-      #- name: Run a one-line script
-      #  run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      #- name: Run a multi-line script
-      #  run: |
-      #    echo Add other actions to build,
-      #    echo test, and deploy your project.
+          .\infrastructure\deploy-infrastructure.ps1 -studentprefix <your abbreviation>
+          
+ 
+          
