--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,31 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- checkout: self
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- task: DockerCompose@0
+  inputs:
+    containerregistrytype: 'Container Registry'
+    dockerRegistryEndpoint: 'GitHub Container Registry'
+    dockerComposeFile: '**/docker-compose.yml'
+    additionalDockerComposeFiles: 'build.docker-compose.yml'
+    action: 'Build services'
+    additionalImageTags: '$(Build.BuildNumber)'
+
+- checkout: self
+- task: DockerCompose@0
+  inputs:
+    containerregistrytype: 'Container Registry'
+    dockerRegistryEndpoint: 'GitHub Container Registry'
+    dockerComposeFile: '**/docker-compose.yml'
+    additionalDockerComposeFiles: 'build.docker-compose.yml'
+    action: 'Push services'
+    additionalImageTags: '$(Build.BuildNumber)'
+
+#- script: echo Hello, world!
+#  displayName: 'Run a one-line script'
+#
+#- script: |
+#    echo Add other tasks to build, test, and deploy your project.
+#    echo See https://aka.ms/yaml
+#  displayName: 'Run a multi-line script'
