--- a/.github/workflows/fabrikam-init.yml
+++ b/.github/workflows/fabrikam-init.yml
@@ -9,11 +9,12 @@ on:
   #schedule:
   #  - cron: '34 13 * * *'
   push:
-    branches: [ "main" ]
+    branches-ignore: [ '**' ]
+    #branches: [ "main" ]
     # Publish semver tags as releases.
     tags: [ 'v*.*.*' ]
-  pull_request:
-    branches: [ "main" ]
+  #pull_request:
+  #  branches: [ "main" ]
 
 env:
   # Use docker.io for Docker Hub if empty
