--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,15 @@
 version: "3.4"
 services:
   api:
-    image: ghcr.io/mkloos-insight/fabrikam-api:latest
-    environment:
-      MONGODB_CONNECTION: mongodb://mongo:27017/contentdb
+    image: ghcr.io/<yourgithubaccount>/fabrikam-api:latest
     ports:
       - "3001:3001"
 
   web:
-    image: ghcr.io/mkloos-insight/fabrikam-web:latest
+    image: ghcr.io/<yourgithubaccount>/fabrikam-web:latest
     depends_on:
         - api
     environment:
         CONTENT_API_URL: http://api:3001
     ports:
-        - "3000:80"   
+        - "3000:80"       
